add different profile for local and prod