@@ -10,6 +10,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.MediaType;
+import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.junit4.SpringRunner;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
@@ -17,6 +18,7 @@ import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 
 import java.lang.reflect.Type;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
@@ -24,6 +26,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 @SpringBootTest
 @RunWith(SpringRunner.class)
 @AutoConfigureMockMvc
+@ActiveProfiles("dev")
 class StudentControllerTest {
 
     @Autowired
@@ -45,7 +48,7 @@ class StudentControllerTest {
         Assert.assertSame(buildingVOS.size(), 8);
 
         // check ids
-        List<Integer> resultIDs = List.of(43, 66, 64, 70, 20, 65, 73, 13);
+        List<Integer> resultIDs = Arrays.asList(new Integer[]{43, 66, 64, 70, 20, 65, 73, 13});
         for (int i = 0; i < buildingVOS.size(); ++i) {
             Assert.assertEquals(buildingVOS.get(i).getId(), resultIDs.get(i));
         }
